fix a few minor style issues in ember quiz stats
fixes CNVS-13608

test plan:
  - enable draft state and quiz stats
  - as a teacher
    - create a quiz with a multiple choice question
    - click the statistics tab
    - the blank slate image should have a little more padding at the top

  - as a student
    - take the quiz

  - as a teacher
    - refresh the statistics tab
    - the line in the summary should now be gone until we have a proper
      normal distribution curve
    - click on the (?) icon for discrimination index
    - the description in the help dialog should no longer have a scrollbar to
      view it all

Reviewed-on: https://gerrit.instructure.com/36389
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Caleb Guanzon <cguanzon@instructure.com>
Product-Review: Derek DeVries <ddevries@instructure.com>

--- a/app/stylesheets/ember_quizzes/statistics.scss
+++ b/app/stylesheets/ember_quizzes/statistics.scss
@@ -41,6 +41,7 @@ $muteTextColor: #949494;
 
   .empty-statistics {
     text-align: center;
+    margin-top: 20px;
 
     img {
       height: 35px;
